# Launcher-In-Progress

./: .gitignore  README.md  gradle.properties  gradlew  local.properties  settings.gradle.kts
.GitHub/workflows/: android-build.yml
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/java/com/pocketlaunch/launcher/: FloatingMenuService.kt  GameOptimizer.kt  MainActivity.kt  ProxyActivity.kt
app/src/main/java/com/pocketlaunch/launcher/core/: NativeEngine.kt
app/src/main/java/com/pocketlaunch/launcher/game/: GameDirectoryManager.kt  InkClientGameEngine.kt  Module.kt  ModuleCategory.kt  ModuleManager.kt
app/src/main/java/com/pocketlaunch/launcher/game/module/render/: AttackIndicatorModule.kt  CpsFpsHudModule.kt  CrystalOptimizerModule.kt  F3DebugModule.kt  FogCustomizerModule.kt  HitboxModule.kt  InventoryHudModule.kt
app/src/main/java/com/pocketlaunch/launcher/game/module/utilities/: FovModifierModule.kt  PackChangerModule.kt  PerspectiveModule.kt  QuickDropModule.kt  ShaderLoaderModule.kt  (+2 more)
app/src/main/java/com/pocketlaunch/launcher/game/overlay/: InkOverlayService.kt  MinecraftButtonStyle.kt
app/src/main/java/com/pocketlaunch/launcher/game/ui/: BaseWindowView.kt  CustomCrosshairDesigner.kt  InkTheme.kt  UiAnimationUtils.kt
app/src/main/java/com/pocketlaunch/launcher/game/util/: GraphicsSettingsManager.kt
app/src/main/java/com/pocketlaunch/launcher/util/: FileImporter.kt
